@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-01-08T00:30:46Z",
+  "timestamp" : "2024-01-08T16:07:29Z",
   "count_outdated" : 216,
   "uniques_outdated" : 152,
-  "count" : 222,
-  "uniques" : 157,
+  "count" : 223,
+  "uniques" : 158,
   "clones" : [
     {
       "timestamp": "2023-12-31T00:00:00Z",
@@ -31,6 +31,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2024-01-08T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
