@@ -1,6 +1,6 @@
 {
-  "count": 6,
-  "uniques": 5,
+  "count": 7,
+  "uniques": 6,
   "clones": [
     {
       "timestamp": "2023-12-31T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2024-01-07T00:00:00Z",
       "count": 3,
       "uniques": 3
+    },
+    {
+      "timestamp": "2024-01-08T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
