@@ -1,3 +1,12 @@
+2024-01-08T16:07:29Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7450041626 # 5
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
+* notice: last 14d: unq all: 6 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 152 216 / 157 222
+* notice: next accum: outdated-unq outdated-all / unq all: 152 216 / 158 223
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-01-08]
+
 2024-01-08T00:30:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7441726067 # 3
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81-devops--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-08
